--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-absl-py==2.0.0
+absl-py==2.1.0
 accelerate==0.27.2
 altair==5.1.2
 anyio==4.0.0
@@ -15,10 +15,10 @@ backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
 blinker==1.7.0
-cachetools==5.3.1
-certifi==2023.7.22
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.15.1
-charset-normalizer==3.2.0
+charset-normalizer==3.3.2
 click==8.1.7
 comm==0.1.4
 contourpy==1.1.0
@@ -28,6 +28,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.14
 diffusers @ git+https://github.com/huggingface/diffusers@7081a256183a123078b976223ee5409e6e19f1ec
+dm-tree==0.1.8
 executing==1.2.0
 fastjsonschema==2.18.0
 filelock==3.13.1
@@ -40,13 +41,13 @@ gast==0.5.4
 gitdb==4.0.11
 GitPython==3.1.40
 google==3.0.0
-google-auth==2.23.3
-google-auth-oauthlib==1.0.0
+google-auth==2.28.1
+google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
-grpcio==1.59.0
+grpcio==1.62.0
 h5py==3.10.0
 huggingface-hub==0.20.3
-idna==3.4
+idna==3.6
 importlib-metadata==6.8.0
 ipykernel==6.25.1
 ipython==8.14.0
@@ -73,20 +74,22 @@ jupyterlab==4.0.5
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.9
 jupyterlab_server==2.24.0
-keras==2.14.0
+keras==2.15.0
+keras-nightly==3.1.0.dev2024030303
 kiwisolver==1.4.5
 KNN==1.0.0
 libclang==16.0.6
 lxml==4.9.3
-Markdown==3.5
+Markdown==3.5.2
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
+MarkupSafe==2.1.5
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==3.0.1
-ml-dtypes==0.2.0
+ml-dtypes==0.3.2
 mpmath==1.3.0
+namex==0.0.7
 nashpy==0.0.40
 nbclient==0.8.0
 nbconvert==7.8.0
@@ -95,13 +98,13 @@ nest-asyncio==1.5.7
 networkx==3.1
 notebook==7.0.3
 notebook_shim==0.2.3
-numpy==1.25.2
+numpy==1.26.4
 oauthlib==3.2.2
 opencv-python==4.8.0.76
 opencv-python-headless==4.8.0.76
 opt-einsum==3.3.0
 overrides==7.4.0
-packaging==23.1
+packaging==23.2
 pandas==2.0.3
 pandocfilters==1.5.0
 parso==0.8.3
@@ -112,12 +115,12 @@ platformdirs==3.10.0
 ply==3.11
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
-protobuf==4.24.4
+protobuf==4.25.3
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==14.0.1
-pyasn1==0.5.0
+pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
 pydeck==0.8.1b0
@@ -154,15 +157,17 @@ stack-data==0.6.2
 streamlit==1.28.2
 sympy==1.12
 tabulate==0.9.0
+tb-nightly==2.17.0a20240304
 tenacity==8.2.3
-tensorboard==2.14.1
-tensorboard-data-server==0.7.1
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.14.0
-termcolor==2.3.0
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.36.0
+tensorflow-macos==2.15.0
+termcolor==2.4.0
 terminado==0.17.1
+tf-nightly==2.17.0.dev20240303
 threadpoolctl==3.2.0
 tinycss2==1.2.1
 tinyml==0.0.6
@@ -176,17 +181,17 @@ tornado==6.3.3
 tqdm==4.66.2
 traitlets==5.9.0
 transformers==4.38.1
-typing_extensions==4.8.0
+typing_extensions==4.10.0
 tzdata==2023.3
 tzlocal==5.2
 uri-template==1.3.0
-urllib3==2.0.4
+urllib3==2.2.1
 validators==0.22.0
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.2
-Werkzeug==3.0.0
+Werkzeug==3.0.1
 widgetsnbextension==4.0.9
 wrapt==1.14.1
 xgboost==0.90
