--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ tensorboard==2.15.2
 tensorboard-data-server==0.7.2
 tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.36.0
-tensorflow-metal==1.1.0
+tensorflow==2.6.2
 termcolor==2.4.0
 typing_extensions==4.10.0
 urllib3==2.2.1
