--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,18 @@ attrs==23.2.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.7.0
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
 decorator==5.1.1
 defusedxml==0.7.1
 docopt==0.6.2
 executing==2.0.1
 fastjsonschema==2.19.1
+Flask==3.0.2
 flatbuffers==23.5.26
-Flask==3.0.0
 gast==0.5.4
 google-auth==2.28.1
 google-auth-oauthlib==1.2.0
@@ -24,6 +26,7 @@ grpcio==1.62.0
 h5py==3.10.0
 idna==3.6
 ipython==8.12.3
+itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.3
 jsonschema==4.21.1
