--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,153 @@
-absl-py==2.1.0
-appnope==0.1.4
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==23.2.0
-backcall==0.2.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.7.0
-cachetools==5.3.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-decorator==5.1.1
-defusedxml==0.7.1
-docopt==0.6.2
-executing==2.0.1
-fastjsonschema==2.19.1
-Flask==3.0.2
-flatbuffers==23.5.26
-gast==0.5.4
-google-auth==2.28.1
-google-auth-oauthlib==1.2.0
-google-pasta==0.2.0
-grpcio==1.62.0
-h5py==3.10.0
-idna==3.6
-ipython==8.12.3
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.3
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyterlab_pygments==0.3.0
-keras==2.15.0
-libclang==16.0.6
-Markdown==3.5.2
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.6
-mistune==3.0.2
-ml-dtypes==0.2.0
-nbclient==0.9.0
-nbconvert==7.16.1
-nbformat==5.9.2
-numpy==1.26.4
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.2
-pandocfilters==1.5.1
-parso==0.8.3
-pexpect==4.9.0
-pickleshare==0.7.5
-pipdeptree==2.16.0
-pipreqs==0.5.0
-platformdirs==4.2.0
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-Pygments==2.17.2
-python-dateutil==2.9.0.post0
-pyzmq==25.1.2
-referencing==0.33.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-rpds-py==0.18.0
-rsa==4.9
-soupsieve==2.5
-stack-data==0.6.3
-tensorflow==2.15.0
-termcolor==2.4.0
-tinycss2==1.2.1
-tornado==6.4
-traitlets==5.14.1
-typing_extensions==4.10.0
-urllib3==2.2.1
-wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.0.1
-wrapt==1.14.1
-yarg==0.1.9
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-arm64
+_py-xgboost-mutex=2.0=cpu_0
+_tflow_select=2.2.0=eigen
+absl-py=2.0.0=pyhd8ed1ab_0
+aiohttp=3.8.5=py310h80987f9_0
+aiosignal=1.3.1=pyhd8ed1ab_0
+astunparse=1.6.3=pyhd8ed1ab_0
+async-timeout=4.0.3=pyhd8ed1ab_0
+attrs=23.1.0=pyh71513ae_1
+blas=2.119=openblas
+blas-devel=3.9.0=19_osxarm64_openblas
+blinker=1.7.0=pyhd8ed1ab_0
+bottleneck=1.3.5=py310h96f19d2_0
+brotli=1.1.0=hb547adb_1
+brotli-bin=1.1.0=hb547adb_1
+brotli-python=1.0.9=py310hc377ac9_7
+bzip2=1.0.8=h93a5062_5
+c-ares=1.21.0=h93a5062_0
+ca-certificates=2023.11.17=hf0a4a13_0
+cachetools=5.3.2=pyhd8ed1ab_0
+certifi=2023.11.17=pyhd8ed1ab_0
+cffi=1.16.0=py310h80987f9_0
+charset-normalizer=3.3.2=pyhd8ed1ab_0
+click=8.1.7=unix_pyh707e725_0
+contourpy=1.0.5=py310h525c30c_0
+cryptography=41.0.3=py310h3c57c4d_0
+cycler=0.12.1=pyhd8ed1ab_0
+flask=2.2.2=py310hca03da5_0
+flatbuffers=23.5.26=h13dd4ca_1
+fonttools=4.25.0=pyhd3eb1b0_0
+freetype=2.12.1=hadb7bae_2
+frozenlist=1.4.0=py310h80987f9_0
+gast=0.4.0=pyh9f0ad1d_0
+giflib=5.2.1=h1a8c8d9_3
+google-auth=2.23.4=pyhca7485f_0
+google-auth-oauthlib=0.4.1=py_2
+google-pasta=0.2.0=pyh8c360ce_0
+grpc-cpp=1.46.4=haeec53e_7
+grpcio=1.42.0=py310h95c9599_0
+h5py=3.9.0=py310haafd478_0
+hdf5=1.12.1=nompi_hf9525e8_104
+icu=68.2=hbdafb3b_0
+idna=3.4=pyhd8ed1ab_0
+importlib-metadata=6.8.0=pyha770c72_0
+itsdangerous=2.1.2=pyhd8ed1ab_0
+jinja2=3.1.2=pyhd8ed1ab_1
+joblib=1.3.2=pyhd8ed1ab_0
+jpeg=9e=h1a8c8d9_3
+keras=2.11.0=py310hca03da5_0
+keras-preprocessing=1.1.2=pyhd8ed1ab_0
+kiwisolver=1.4.4=py310h313beb8_0
+krb5=1.20.1=h127bd45_0
+lcms2=2.15=h481adae_0
+lerc=3.0=hc377ac9_0
+libabseil=20220623.0=cxx17_h28b99d4_6
+libblas=3.9.0=19_osxarm64_openblas
+libbrotlicommon=1.1.0=hb547adb_1
+libbrotlidec=1.1.0=hb547adb_1
+libbrotlienc=1.1.0=hb547adb_1
+libcblas=3.9.0=19_osxarm64_openblas
+libcurl=8.2.1=h0f1d93c_0
+libcxx=16.0.6=h4653b0c_0
+libdeflate=1.17=h80987f9_1
+libedit=3.1.20191231=hc8eb9b7_2
+libev=4.33=h642e427_1
+libffi=3.4.2=h3422bc3_5
+libgfortran=5.0.0=13_2_0_hd922786_1
+libgfortran5=13.2.0=hf226fd6_1
+liblapack=3.9.0=19_osxarm64_openblas
+liblapacke=3.9.0=19_osxarm64_openblas
+libnghttp2=1.52.0=h10c0552_1
+libopenblas=0.3.24=openmp_hd76b1f2_0
+libpng=1.6.39=h76d750c_0
+libprotobuf=3.20.3=hb5ab8b9_0
+libsqlite=3.44.0=h091b4b1_0
+libssh2=1.10.0=h449679c_2
+libtiff=4.5.1=h313beb8_0
+libwebp=1.3.2=ha3663a8_0
+libwebp-base=1.3.2=hb547adb_0
+libxgboost=1.7.3=h313beb8_0
+libzlib=1.2.13=h53f4e23_5
+llvm-openmp=17.0.5=hcd81f8e_0
+markdown=3.5.1=pyhd8ed1ab_0
+markupsafe=2.1.1=py310h1a28f6b_0
+matplotlib=3.8.0=py310hca03da5_0
+matplotlib-base=3.8.0=py310h46d7db6_0
+multidict=6.0.2=py310h1a28f6b_0
+munkres=1.1.4=pyh9f0ad1d_0
+ncurses=6.4=h463b476_2
+numexpr=2.8.7=py310hecc3335_0
+numpy=1.26.0=py310h3b2db8e_0
+numpy-base=1.26.0=py310ha9811e2_0
+oauthlib=3.2.2=pyhd8ed1ab_0
+openblas=0.3.24=openmp_hce3e5ba_0
+openjpeg=2.5.0=hbc2ba62_2
+openssl=1.1.1w=h53f4e23_0
+opt_einsum=3.3.0=pyhc1e730c_2
+packaging=23.2=pyhd8ed1ab_0
+pandas=2.1.1=py310h46d7db6_0
+pillow=10.0.1=py310h3b245a6_0
+pip=23.3.1=pyhd8ed1ab_0
+protobuf=3.20.3=py310h313beb8_0
+py-xgboost=1.7.3=py310hca03da5_0
+pyasn1=0.5.0=pyhd8ed1ab_0
+pyasn1-modules=0.3.0=pyhd8ed1ab_0
+pycparser=2.21=pyhd8ed1ab_0
+pyjwt=2.8.0=pyhd8ed1ab_0
+pyopenssl=23.2.0=pyhd8ed1ab_1
+pyparsing=3.0.9=pyhd8ed1ab_0
+pysocks=1.7.1=pyha2e5f31_6
+python=3.10.13=hc0d8a6c_0
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python-flatbuffers=23.5.26=pyhd8ed1ab_0
+python-tzdata=2023.3=pyhd8ed1ab_0
+pytz=2023.3.post1=pyhd8ed1ab_0
+pyu2f=0.1.5=pyhd8ed1ab_0
+re2=2022.06.01=h9a09cb3_1
+readline=8.2=h92ec313_1
+requests=2.31.0=pyhd8ed1ab_0
+requests-oauthlib=1.3.1=pyhd8ed1ab_0
+rsa=4.9=pyhd8ed1ab_0
+scikit-learn=1.3.0=py310h46d7db6_0
+scipy=1.11.3=py310h20cbe94_0
+seaborn=0.12.2=py310hca03da5_0
+setuptools=68.2.2=pyhd8ed1ab_0
+six=1.16.0=pyh6c4a22f_0
+snappy=1.1.10=h17c5cce_0
+sqlite=3.44.0=hf2abe2d_0
+tensorboard=2.11.0=py310hca03da5_0
+tensorboard-data-server=0.6.1=py310ha6e5c4f_0
+tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
+tensorflow=2.11.0=eigen_py310h6363ca7_0
+tensorflow-base=2.11.0=eigen_py310h8747ca9_0
+tensorflow-estimator=2.11.0=py310hca03da5_0
+termcolor=2.3.0=pyhd8ed1ab_0
+threadpoolctl=3.2.0=pyha21a80b_0
+tk=8.6.13=h5083fa2_1
+tornado=6.3.3=py310h80987f9_0
+typing-extensions=4.8.0=hd8ed1ab_0
+typing_extensions=4.8.0=pyha770c72_0
+tzdata=2023c=h71feb2d_0
+urllib3=2.1.0=pyhd8ed1ab_0
+werkzeug=3.0.1=pyhd8ed1ab_0
+wheel=0.35.1=pyhd3eb1b0_0
+wrapt=1.14.1=py310h1a28f6b_0
+xgboost=1.7.3=py310hca03da5_0
+xz=5.4.2=h80987f9_0
+yarl=1.8.1=py310h1a28f6b_0
+zipp=3.17.0=pyhd8ed1ab_0
+zlib=1.2.13=h53f4e23_5
+zstd=1.5.5=h4f39d0f_0
