--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,220 @@
+absl-py==2.1.0
+accelerate==0.27.2
+altair==5.1.2
+anyio==4.0.0
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.12.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.15.1
+charset-normalizer==3.3.2
+chex==0.1.86
 click==8.1.3
+comm==0.1.4
+contourpy==1.1.0
+cycler==0.11.0
+debugpy==1.6.7.post1
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+diffusers @ git+https://github.com/huggingface/diffusers@7081a256183a123078b976223ee5409e6e19f1ec
+distlib==0.3.8
+dm-haiku==0.0.12
+dm-tree==0.1.8
+docopt==0.6.2
+etils==1.8.0
+executing==1.2.0
+fastjsonschema==2.18.0
+filelock==3.13.1
 Flask==2.2.2
+flatbuffers==23.5.26
+flax==0.8.2
+fonttools==4.42.1
+fqdn==1.5.1
+fsspec==2024.2.0
+gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.40
+google==3.0.0
+google-auth==2.28.1
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+grpcio==1.62.0
 gunicorn==20.1.0
+h5py==3.10.0
+huggingface-hub==0.20.3
+idna==3.6
 importlib-metadata==5.0.0
+importlib_resources==6.4.0
+ipykernel==6.25.1
+ipython==8.12.3
+ipython-genutils==0.2.0
+ipywidgets==8.1.1
+isoduration==20.11.0
 itsdangerous==2.1.2
+jax==0.4.25
+jaxlib==0.4.25
+jedi==0.19.0
 Jinja2==3.1.2
+jmp==0.0.4
+joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+jupyter_server==2.7.3
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.5
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
+jupyterlab_server==2.24.0
+keras==2.15.0
+keras-nightly==3.1.0.dev2024030303
+kiwisolver==1.4.5
+KNN==1.0.0
+libclang==16.0.6
+lxml==4.9.3
+Markdown==3.5.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.1
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==3.0.1
+ml-dtypes==0.3.2
+mpmath==1.3.0
+msgpack==1.0.8
+namex==0.0.7
+nashpy==0.0.40
+nbclient==0.8.0
+nbconvert==7.16.3
+nbformat==5.9.2
+nest-asyncio==1.5.7
+networkx==3.1
+notebook==7.0.3
+notebook_shim==0.2.3
+numpy==1.26.4
+oauthlib==3.2.2
+opencv-python==4.8.0.76
+opencv-python-headless==4.8.0.76
+opt-einsum==3.3.0
+optax==0.2.2
+orbax-checkpoint==0.5.7
+overrides==7.4.0
+packaging==23.2
+pandas==2.0.3
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.0
+pipreqs==0.5.0
+platformdirs==3.10.0
+ply==3.11
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+protobuf==4.25.3
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py4j==0.10.9.7
+pyarrow==14.0.1
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydeck==0.8.1b0
+pygambit==16.0.2
+Pygments==2.16.1
+pyparsing==3.0.9
+pyspark==3.5.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3
+PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.4.4
+QtPy==2.4.0
+referencing==0.30.2
+regex==2023.12.25
+requests==2.31.0
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.0
+rpds-py==0.10.2
+rsa==4.9
+safetensors==0.4.2
+scikit-learn==1.3.1
+scipy==1.11.2
+seaborn==0.12.2
+Send2Trash==1.8.2
+sentencepiece==0.2.0
+six==1.16.0
+sly==0.5
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.2
+streamlit==1.28.2
+sympy==1.12
+tabulate==0.9.0
+tb-nightly==2.17.0a20240304
+tenacity==8.2.3
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.36.0
+tensorflow-macos==2.15.0
+tensorstore==0.1.56
+termcolor==2.4.0
+terminado==0.17.1
+tf-nightly==2.17.0.dev20240303
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+tinyml==0.0.6
+tokenizers==0.15.2
+toml==0.10.2
+toolz==0.12.0
+torch==2.2.0
+torchaudio==2.2.0.dev20240222
+torchvision==0.18.0.dev20240222
+tornado==6.3.3
+tqdm==4.66.2
+traitlets==5.9.0
+transformers==4.38.1
+typing_extensions==4.10.0
+tzdata==2023.3
+tzlocal==5.2
+ultraimport==0.0.7
+uri-template==1.3.0
+urllib3==2.2.1
+validators==0.22.0
+virtualenv==20.25.1
+wcwidth==0.2.6
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.2
 Werkzeug==2.2.2
+widgetsnbextension==4.0.9
+wrapt==1.14.1
+xgboost==0.90
+yarg==0.1.9
 zipp==3.10.0
