--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-python==3.10.*
-setuptools
-requests
-pandas
-google-colab
+matplotlib==3.7.2
+numpy==1.26.4
+pandas==2.0.3
+protobuf==5.26.1
+Requests==2.31.0
+scikit_learn==1.3.1
+seaborn==0.13.2
+xgboost==0.90
 Flask
-numpy
-future
-matplotlib
-seaborn
-scikit-learn
-warnings
 pickle
-xgboost
