--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Flask==2.2.2
 matplotlib==3.7.2
 numpy==1.26.4
 pandas==2.0.3
@@ -6,5 +7,3 @@ Requests==2.31.0
 scikit_learn==1.3.1
 seaborn==0.13.2
 xgboost==0.90
-Flask
-pickle
