--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ Requests==2.31.0
 scikit_learn==1.3.1
 seaborn==0.13.2
 xgboost==0.90
-gunicorn
+Werkzeug==2.2.2
+connexion[swagger-ui]=2.9.9
+gunicorn=20.1.0
